syntax = "proto3";

option go_package = "github.com/no-mole/venus/proto/pbconfig";

import "google/protobuf/empty.proto";

service ConfigService {
  rpc AddOrUpdateOidc(Oidc) returns(Oidc);
  rpc ChangeOidcStatus(ChangeOidcStatusRequest) returns(Oidc);
  rpc LoadOidcConfig(google.protobuf.Empty) returns(Oidc);
}

message ChangeOidcStatusRequest {
  OidcStatus status = 1;
}

enum OidcStatus {
  OidcStatusNil = 0;
  OidcStatusEnable = 1;
  OidcStatusDisable = 2;
}

message Oidc {
  string oauth_server = 1;
  string client_id = 2;
  string client_secret = 3;
  string redirect_uri = 4;
  OidcStatus oidc_status = 5;
}