syntax = "proto3";

option go_package = "github.com/no-mole/venus/proto/pbsysconfig";

import "google/protobuf/empty.proto";

service SysConfigService {
  rpc SysConfigUpdate(SysConfig) returns(SysConfig);
  rpc SysConfigGet(google.protobuf.Empty) returns(SysConfig);
}

enum OidcStatus {
  OidcStatusNil = 0;
  OidcStatusEnable = 1;
  OidcStatusDisable = -1;
}

message SysConfig {
  Oidc oidc = 2;
}

enum AutoConfigSelector {
  AutoConfigSelectorNil = 0;
  AutoConfigSelectorYes = 1;
  AutoConfigSelectorNo = -1;
}

message Oidc {
  string oauth_server = 1; // oauth服务url
  string client_id = 2; // client_id
  string client_secret = 3; // client_secret
  string redirect_uri = 4; // 跳转uri
  OidcStatus oidc_status = 5; // 是否启用oidc
}
